[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/duck-Sheet.png" type="Texture" id=1]
[ext_resource path="res://Duck.gd" type="Script" id=2]
[ext_resource path="res://Sounds/peck.wav" type="AudioStream" id=3]
[ext_resource path="res://Sounds/death.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=6]
radius = 32.1403

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 3, 3 )

[sub_resource type="Animation" id=2]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 2, 3 ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "returnToNormal"
} ]
}

[sub_resource type="Animation" id=3]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 0, 1 ]
}

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 4, 4 )

[node name="Duck" type="KinematicBody2D"]
collision_layer = 2
collision_mask = 2147483650
script = ExtResource( 2 )

[node name="FeedsLocator" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="FeedsLocator"]
shape = SubResource( 6 )

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2( 0, 4 )
shape = SubResource( 4 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
hframes = 4
frame = 3

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/eat = SubResource( 2 )
anims/walk = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0, 4 )
shape = SubResource( 5 )

[node name="SoundDeath" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
volume_db = -10.286

[node name="SoundPeck" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 3 )
volume_db = -10.857
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
